--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,15 @@
 {
-    "builds": [
-      { "src": "/src", "use": "@vercel/static-build" }
-    ],
-    "outputDirectory": "src"
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/server.js",
+      "use": "@now/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ]
+}
