--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,8 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "index.js"
+      "src": "src/(.*)",
+      "dest": "http/controllers/users/routes.ts"
     }
   ]
 }
